# analog-task-manager

./: .gitignore  MainScript.py  ProgramMain v0.0.py  README.md
_site/: LICENSE.md  README.md
_site/linux v0.0/include/: CPU.hpp
_site/windows v0.2/: sketchv0.2.ino
linux v0.0/: CMakeLists.txt  cpu_test.py
linux v0.0/include/: FixedDeque.hpp
linux v0.0/source/: CMakeLists.txt  main.cpp
linux/source/: CPU.cpp
v0.0/: ProgramMain v0.0.py
windows v0.0/: sketch v0.0.ino
windows v0.1/: ProgramMain v0.1.py
windows v0.2/: ProgramMain v0.2.py
windows vSOUND/: ProgramMain v0.1.py  sketchv0.1.ino
